# mSIGNA

./: .travis.yml  Makefile.am  README.md  autogen.sh  build-all-deps.sh  build-all.sh  configure.ac  mSIGNA.am.pro
