# Copyright (c) 2015-2017 secureTXS (NZ) Ltd., All Rights Reserved.
ACLOCAL_AMFLAGS = -I build-aux/m4
SUBDIRS = deps/logger deps/sysutils deps/CoinCore deps/CoinQ deps/CoinDB

#QT_QMAKE=qmake-qt5

#Makefile.qmake: mSIGNA.am.pro
#	$(QT_QMAKE) -makefile -o Makefile.qmake CONFIG+=debug mSIGNA.am.pro

#all-local: Makefile.qmake
#	$(MAKE) -f Makefile.qmake all

#check-local:Makefile.qmake
#	$(MAKE) -f Makefile.qmake test

#clean-local: Makefile.qmake
#	$(MAKE) -f Makefile.qmake clean
#	rm -f Makefile.qmake
